<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        tools:context=".launch.details.LaunchDetailsActivity">
        <fragment
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/mapFragment"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            app:layout_constraintDimensionRatio="W,1:1.5"
            android:layout_height="0px"/>
        <FrameLayout app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/veil"
            android:background="#99FFFFFF"
            android:visibility="invisible"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            app:layout_constraintDimensionRatio="W,1:1.5"
            android:layout_height="0px"
            tools:context=".launch.details.LaunchDetailsActivity">
            <TextView
                android:layout_gravity="center"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/black"
                android:text="@string/launch_location_not_available"
                android:gravity="center"
                tools:text="@string/launch_location_not_available"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </FrameLayout>

        <TextView
            app:layout_constraintBottom_toBottomOf="@+id/mapFragment"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/timerTxt"
            android:layout_margin="16dp"
            android:textColor="@color/black"
            android:fontFamily="sans-serif-medium"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <com.google.android.material.appbar.MaterialToolbar
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#FFFFFFFF"
            app:popupTheme="@style/AppTheme.PopupOverlay"/>
        <TextView
            app:layout_constraintTop_toBottomOf="@+id/mapFragment"
            android:id="@+id/lblAgencyName"
            android:layout_margin="16dp"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/black"
            android:text="@string/lbl_agency_name"
            tools:text="@string/lbl_agency_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            app:layout_constraintTop_toBottomOf="@+id/lblAgencyName"
            android:id="@+id/agencyTitle"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/black"
            tools:text="@string/sample_agency_name"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            app:layout_constraintTop_toBottomOf="@+id/agencyTitle"
            android:id="@+id/lblDescription"
            android:layout_margin="16dp"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/black"
            android:text="@string/description"
            tools:text="@string/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            app:layout_constraintTop_toBottomOf="@+id/lblDescription"
            android:id="@+id/missionDescription"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/black"
            tools:text="@string/sample_description"
            android:fontFamily="sans-serif"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>